feat: remove temporal validity filter
